// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Outline renders outline renders loading if symbols are loading 1`] = `
<div
  className="outline-pane-info"
>
  Loading…
</div>
`;

exports[`Outline renders outline renders loading if symbols is not defined 1`] = `
<div
  className="outline-pane-info"
>
  Loading…
</div>
`;

exports[`Outline renders outline renders placeholder \`No File Selected\` if no selectedSource is defined 1`] = `
<div
  className="outline-pane-info"
>
  No file selected
</div>
`;

exports[`Outline renders outline should render ignore anonymous functions 1`] = `
<div
  className="outline"
>
  <div>
    <ul
      className="outline-list"
    >
      <li
        className="outline-list__element"
        key="my_example_function1:21:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "my_example_function1",
              "parameterNames": undefined,
            }
          }
        />
      </li>
    </ul>
    <div
      className="outline-footer bottom"
    >
      <button
        className=""
        onClick={[Function]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;

exports[`Outline renders outline should render placholder \`No functions\` if all func are anonymous 1`] = `
<div
  className="outline"
>
  <div
    className="outline-pane-info"
  >
    No functions
  </div>
</div>
`;

exports[`Outline renders outline should render placholder \`No functions\` if symbols has no functions 1`] = `
<div
  className="outline"
>
  <div
    className="outline-pane-info"
  >
    No functions
  </div>
</div>
`;

exports[`Outline renders outline should sort functions alphabetically 1`] = `
<div
  className="outline"
>
  <div>
    <ul
      className="outline-list"
    >
      <li
        className="outline-list__element"
        key="a_funciton:70:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "a_funciton",
              "parameterNames": undefined,
            }
          }
        />
      </li>
      <li
        className="outline-list__element"
        key="c_funciton:25:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "c_funciton",
              "parameterNames": undefined,
            }
          }
        />
      </li>
      <li
        className="outline-list__element"
        key="x_funciton:30:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "x_funciton",
              "parameterNames": undefined,
            }
          }
        />
      </li>
    </ul>
    <div
      className="outline-footer bottom"
    >
      <button
        className="active"
        onClick={[Function]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;

exports[`Outline should render a list of functions when properties change 1`] = `
<div
  className="outline"
>
  <div>
    <ul
      className="outline-list"
    >
      <li
        className="outline-list__element"
        key="my_example_function1:21:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "my_example_function1",
              "parameterNames": undefined,
            }
          }
        />
      </li>
      <li
        className="outline-list__element"
        key="my_example_function2:22:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "my_example_function2",
              "parameterNames": undefined,
            }
          }
        />
      </li>
    </ul>
    <div
      className="outline-footer bottom"
    >
      <button
        className=""
        onClick={[Function]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;
